# xuanxin

./: .gitignore  README.md  pyproject.toml
examples/: custom.css
examples/content/: dark-theme-demo.md  hello-xuanxin.md  the-serendipity-of-language.md
ops/: README.md  dev.md
tests/: test_xuanxin.py
xuanxin/: __init__.py  _version.py  asset_copy.py  autolink.py  book.py  builder.py  cli.py  diary.py  diary_i18n.py  extensions.py  footnotes.py  gallery_crypto.py  gallery_sections.py  image_attrs.py  image_convert.py  includes.py  latex.py  note_sections.py  paginate.py  processor.py  renderer.py  section_nav.py
xuanxin/static/: diary-index.js  page-reader.js
xuanxin/static/themes/: _base.css  dark.css  default.css  minimal.css
xuanxin/templates/: book_index.html  diary_index.html  diary_post.html  index.html  post.html
